fixed mobile overflow

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -14,6 +14,9 @@ p {
 .fw-400 {
   font-weight: 500;
 }
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
 
 @media screen and (max-width: 900px) {
   p {
